implement LC